# CrystalAgent

./: .gitignore  CHANGELOG.md  CrystalTopos.olean  CrystalZResonance.lean  HANDOFF.md  LICENSE  README.md  README_CrystalAxiom.md  README_CrystalCosmo.md  README_CrystalGauge.md  README_CrystalGravity.md  README_CrystalMixing.md  README_CrystalQCD.md  README_CrystalQuantum.md  README_CrystalRiemann.md  README_CrystalWACAScan.md  README_QuantumLibrary.md  RULES.md  START_HERE.md  a4_corrections_session9.patch  add_copyright.sh  agda_bridge_proofs.agda  build_rag_bundle.sh  fix_agda.sh  fix_bridges.sh  session4_patches.sh
crystal-toe/: Cargo.toml  CrystalOracle.hs  HANDOFF_SESSION3.md  LLM_PROMPT_GUIDE.md  README.MD  WASM.md  cross_check.py  crystal_dashboard.html  haskell_toe.py  test_crystal_toe.py
crystal-toe/html/: TODO_NEXT_SESSION.md  blackhole.html  cosmos_3d.html  crystal_dashboard.html  crystal_toe.d.ts  crystal_toe.js  crystal_toe_bg.wasm  crystal_toe_bg.wasm.d.ts  earth_3d.html  em_pulse_3d.html  fluid_d2q9.html  galaxy_3d.html  galaxy_collision.html  geodesics.html  ising_3d.html  ising_phase.html  mera_tower.html  optics_3d.html  package.json  photon_evolution.html  quantum_gravity.html  quarks_to_cosmos.html  satellites.html  star_3d.html  three_body.html  unified_dynamics.html  wasm.rs
crystal-toe/python/: hello.py
crystal-toe/src/: Cargo.toml  alpha_proton.rs  atoms.rs  cosmo.rs  cross_domain.rs  discoveries.rs  gauge.rs  gravity.rs  gravity_dyn.rs  heyting.rs  hierarchy.rs  hologron.rs  layer.rs  lib.rs  mandelbrot.rs  mera.rs  mixing.rs  monad.rs  noether.rs  protein.rs  proton_radius.rs  py.rs  pyproject.toml  qcd.rs  quantum.rs  riemann.rs  structural.rs  toe.rs  tower.rs  vev.rs  waca_scan.rs  wasm.rs
crystal-toe/tests/: integration.rs  test_crystal_toe.py
crystal-topos/: Cargo.toml  README.md  pyproject.toml
crystal-topos/examples/: 01_hello_crystal.py  02_sector_spectrum.py  03_time_evolution.py  04_creation_annihilation.py  05_two_particles.py  06_entanglement.py  07_grover_search.py  08_qft_phases.py  09_decoherence.py  100_genetic_code_ecc.py  101_nfw_navigation.py  102_metamaterial_design.py  103_drug_docking.py  104_casimir_water_bridge.py  105_beta0_nfw_bridge.py  106_turbulence_algebra.py  107_codons_dark_matter.py  108_hohmann_transfer.py  109_gravitational_slingshot.py  10_full_simulation.py  110_atmospheric_drag.py  111_radiation_dose.py  112_solar_panel_efficiency.py  113_rtg_power.py  114_signal_delay.py  115_117_qec_thermal_propellant.py  11_newton_laws.py  12_kepler_orbits.py  13_maxwell_equations.py  14_schwarzschild.py  15_special_relativity.py  16_general_relativity.py  17_neutrino_masses.py  18_ckm_matrix.py  (+91 more)
(+822 files in other folders)
