# Copyright (c) 2026 Daland Montgomery
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "crystal-toe"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Crystal Topos — 198 observables from A_F"

[lib]
name = "crystal_toe"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]

[features]
default = []
python = ["pyo3"]
wasm = ["wasm-bindgen", "serde", "serde-wasm-bindgen"]