[package]
name = "crystal-toe"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Crystal Topos — 198 observables from A_F = ℂ ⊕ M₂(ℂ) ⊕ M₃(ℂ)"

[lib]
name = "crystal_toe"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[dev-dependencies]

[features]
default = []
python = ["pyo3"]
